tests/NormalTests/paczka1/fuzzy1/56207588.err
Error in line 12: TbYLJpZ A152 31,6
Error in line 11: 7jbrWINn7Fn S294 28,1
Error in line 24: 7jbrWINn7Fn A548 44,3
Error in line 29: 7jbrWINn7Fn N624 87,0
Error in line 31: TbYLJpZ A152 39,7
